[gd_scene load_steps=32 format=2]

[ext_resource path="res://Wally.gd" type="Script" id=1]
[ext_resource path="res://WPlayer.gd" type="Script" id=2]
[ext_resource path="res://dejavu-fonts-ttf-2.37/dejavu.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameBackgroundView.gd" type="Script" id=4]
[ext_resource path="res://Globals.gd" type="Script" id=5]
[ext_resource path="res://imgs/bckgrnds/default.png" type="Texture" id=6]
[ext_resource path="res://ConfigureView.gd" type="Script" id=7]
[ext_resource path="res://dejavu-fonts-ttf-2.37/dejavu_big.tres" type="DynamicFont" id=8]
[ext_resource path="res://dejavu-fonts-ttf-2.37/dejavu_long.tres" type="DynamicFont" id=9]
[ext_resource path="res://Hand.gd" type="Script" id=10]
[ext_resource path="res://imgs/general/mentor_logo_default.svg" type="Texture" id=11]
[ext_resource path="res://Ball.gd" type="Script" id=12]
[ext_resource path="res://BallArea.gd" type="Script" id=13]
[ext_resource path="res://imgs/wplayer/show.png" type="Texture" id=14]
[ext_resource path="res://ButtonHide.gd" type="Script" id=15]
[ext_resource path="res://imgs/wplayer/point.png" type="Texture" id=16]
[ext_resource path="res://imgs/wplayer/hide.png" type="Texture" id=17]
[ext_resource path="res://imgs/wplayer/grab.png" type="Texture" id=18]
[ext_resource path="res://ButtonShow.gd" type="Script" id=19]
[ext_resource path="res://ButtonGrab.gd" type="Script" id=20]
[ext_resource path="res://ButtonPoint.gd" type="Script" id=21]
[ext_resource path="res://ButtonMoar.gd" type="Script" id=22]
[ext_resource path="res://imgs/wplayer/settings.png" type="Texture" id=23]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 38.6146, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 996, 48.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 567 )

[sub_resource type="CircleShape2D" id=8]
radius = 112.0

[sub_resource type="CircleShape2D" id=9]
radius = 104.307

[sub_resource type="CircleShape2D" id=10]
radius = 104.307

[node name="Wally" type="Node"]
script = ExtResource( 1 )

[node name="Globals" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )

[node name="TaskLabel" type="Label" parent="Background"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1920.0
custom_colors/font_color = Color( 0.784314, 0.470588, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Cześć!"

[node name="WPlayer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LeftHand" type="KinematicBody2D" parent="WPlayer"]
z_index = 1
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand"]
shape = SubResource( 4 )

[node name="Menu" type="Node2D" parent="WPlayer/LeftHand"]
position = Vector2( 840, 176 )

[node name="SizeArea" type="Area2D" parent="WPlayer/LeftHand/Menu"]
position = Vector2( -485, -128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/SizeArea"]
position = Vector2( 242.5, 64 )
scale = Vector2( 6.28, 6.48 )
shape = SubResource( 7 )

[node name="ButtonMoar" type="Area2D" parent="WPlayer/LeftHand/Menu"]
position = Vector2( -65, -64 )
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/ButtonMoar"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/LeftHand/Menu/ButtonMoar"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 23 )
hframes = 4
frame = 3

[node name="ButtonShow" type="Area2D" parent="WPlayer/LeftHand/Menu"]
visible = false
position = Vector2( 0, 128 )
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/ButtonShow"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/LeftHand/Menu/ButtonShow"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="ButtonHide" type="Area2D" parent="WPlayer/LeftHand/Menu"]
visible = false
position = Vector2( 0, 256 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/ButtonHide"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/LeftHand/Menu/ButtonHide"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )
hframes = 4
frame = 3

[node name="ButtonGrab" type="Area2D" parent="WPlayer/LeftHand/Menu"]
position = Vector2( -243, -64 )
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/ButtonGrab"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/LeftHand/Menu/ButtonGrab"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
hframes = 4
frame = 3

[node name="ButtonPoint" type="Area2D" parent="WPlayer/LeftHand/Menu"]
position = Vector2( -421, -64 )
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/LeftHand/Menu/ButtonPoint"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/LeftHand/Menu/ButtonPoint"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
hframes = 4
frame = 3

[node name="RightHand" type="KinematicBody2D" parent="WPlayer"]
z_index = 1
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand"]
shape = SubResource( 4 )

[node name="Menu" type="Node2D" parent="WPlayer/RightHand"]
position = Vector2( 936, 176 )

[node name="SizeArea" type="Area2D" parent="WPlayer/RightHand/Menu"]
position = Vector2( 0, -128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/SizeArea"]
position = Vector2( 240, 64 )
scale = Vector2( 6.28, 6.48 )
shape = SubResource( 7 )

[node name="ButtonMoar" type="Area2D" parent="WPlayer/RightHand/Menu"]
position = Vector2( 64, -64 )
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/ButtonMoar"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/RightHand/Menu/ButtonMoar"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 23 )
hframes = 4
frame = 3

[node name="ButtonShow" type="Area2D" parent="WPlayer/RightHand/Menu"]
visible = false
position = Vector2( 0, 128 )
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/ButtonShow"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/RightHand/Menu/ButtonShow"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="ButtonHide" type="Area2D" parent="WPlayer/RightHand/Menu"]
visible = false
position = Vector2( 0, 256 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/ButtonHide"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/RightHand/Menu/ButtonHide"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )
hframes = 4
frame = 3

[node name="ButtonGrab" type="Area2D" parent="WPlayer/RightHand/Menu"]
position = Vector2( 242, -64 )
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/ButtonGrab"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/RightHand/Menu/ButtonGrab"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
hframes = 4
frame = 3

[node name="ButtonPoint" type="Area2D" parent="WPlayer/RightHand/Menu"]
position = Vector2( 420, -64 )
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WPlayer/RightHand/Menu/ButtonPoint"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WPlayer/RightHand/Menu/ButtonPoint"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
hframes = 4
frame = 3

[node name="ConfigureView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 7 )

[node name="InfoLabel" type="Label" parent="ConfigureView"]
margin_left = 772.0
margin_top = 710.0
margin_right = 1884.0
margin_bottom = 1045.0
custom_colors/font_color = Color( 0.784314, 0.470588, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
align = 3
autowrap = true

[node name="TimeoutLabel" type="Label" parent="ConfigureView"]
margin_left = 1759.0
margin_top = 60.0
margin_right = 1840.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0.784314, 0.470588, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": "WebcamTestView"
}

[node name="BallShelf" type="KinematicBody2D" parent="ConfigureView"]
position = Vector2( 1048, 1144 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/BallShelf"]
position = Vector2( -91, -17.75 )
shape = SubResource( 1 )

[node name="WallLeft" type="KinematicBody2D" parent="ConfigureView"]
position = Vector2( 0, -3120 )
scale = Vector2( 1, 7.04 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/WallLeft"]
position = Vector2( -41, 34 )
shape = SubResource( 2 )

[node name="WallRight" type="KinematicBody2D" parent="ConfigureView"]
position = Vector2( 2000, -3192 )
scale = Vector2( 1, 7.16 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/WallRight"]
position = Vector2( -41, 34 )
shape = SubResource( 2 )

[node name="Ball" type="RigidBody2D" parent="ConfigureView"]
position = Vector2( 456, 464 )
collision_layer = 4
collision_mask = 4
contacts_reported = 100
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="ConfigureView/Ball"]
self_modulate = Color( 0.105882, 0.627451, 0.219608, 1 )
position = Vector2( -0.249992, -2.24999 )
scale = Vector2( 0.848315, 0.848315 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/Ball"]
shape = SubResource( 8 )

[node name="BallArea" type="Area2D" parent="ConfigureView/Ball"]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/Ball/BallArea"]
shape = SubResource( 9 )

[node name="BallTarget" type="Area2D" parent="ConfigureView"]
position = Vector2( 456, 464 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="ConfigureView/BallTarget"]
self_modulate = Color( 0.105882, 0.627451, 0.219608, 0.45098 )
position = Vector2( -0.25, -2.25 )
scale = Vector2( 0.848315, 0.848315 )
z_index = -1
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConfigureView/BallTarget"]
shape = SubResource( 10 )

[node name="GameBackgroundView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 4 )

[node name="WebcamTestView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TimeoutLabel" type="Label" parent="WebcamTestView"]
margin_left = 1759.0
margin_top = 60.0
margin_right = 1840.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0.784314, 0.470588, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": "WebcamTestView"
}

[node name="GameView" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -16.0
margin_right = 1896.0
margin_bottom = 1064.0

[connection signal="ball_clicked" from="ConfigureView/Ball" to="." method="_on_Ball_ball_clicked"]
[connection signal="body_entered" from="ConfigureView/Ball" to="ConfigureView/Ball" method="_on_Ball_body_entered"]
[connection signal="body_entered" from="ConfigureView/BallTarget" to="." method="_on_BallTarget_body_entered"]
[connection signal="body_exited" from="ConfigureView/BallTarget" to="." method="_on_BallTarget_body_exited"]
